# backend/src/routes/positionRoutes.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
-import { getCandidatesForPosition } from '../presentation/controllers/positionController';
+import { getAllPositions, getCandidatesForPosition } from '../presentation/controllers/positionController';
 
 const router = Router();
 
+router.get('/', getAllPositions);
 router.get('/:id/candidates', getCandidatesForPosition);
 
 export default router;
